--- a/hotels.html
+++ b/hotels.html
@@ -50,12 +50,12 @@
               <div class="day-value">
                 <div class="center">
                   <label for="from-value">От</label>
-                  <input type="text" name="from-value" id="from-value" placeholder="0">
+                  <input type="text" name="from-value" id="from-value" value="0" >
                 </div>
                 <div class="vertical-line"></div>
                 <div class="center">
                   <label for="till-value">До</label>
-                  <input type="text" name="till-value" id="till-value" placeholder="3000">
+                  <input type="text" name="till-value" id="till-value" value="3000">
                 </div>
               </div>
               <div class="bar-on"></div>
