--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li class="blue-feature first-feature">
               <div class="feature-container">
                 <div class="align">
-                  <h2>Настоящий<br>городок</h2>
+                  <h2>Настоящий городок</h2>
                   <span>— №1 —</span>
                   <p class="main-list-p">Седона - не аттракцион для туристов, там течет своя жизнь</p>
                 </div>
@@ -60,24 +60,24 @@
               <div class="feature-container">
                 <img src="img/feature-2.jpg" width="800" height="400" alt="Мост дьявола">
                 <div class="align">
-                  <h2>Там есть<br>мост дьявола</h2>
+                  <h2>Там есть мост дьявола</h2>
                   <span>— №2 —</span>
                   <p class="main-list-p">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
                 </div>
               </div>
             </li>
-            <li class="white-feature">
-              <h2>Небольшая<br>площадь</h2>
+            <li class="grey-feature">
+              <h2>Небольшая площадь</h2>
               <span>— №3 —</span>
               <p class="main-list-p">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="white-feature">
-              <h2>Красивая<br>дорога</h2>
+            <li class="grey-feature">
+              <h2>Красивая дорога</h2>
               <span>— №4 —</span>
               <p class="main-list-p">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="white-feature">
-              <h2>Мало<br>туристов</h2>
+            <li class="grey-feature">
+              <h2>Мало туристов</h2>
               <span>— №5 —</span>
               <p class="main-list-p">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
@@ -93,26 +93,26 @@
             <form class="hotels-searching-date" method="post" action="https://echo.htmlacademy.ru">
               <p>
                 <label for="arrival-date">Дата заезда:</label>
-                <input class="arrival-date" type="text" name="arrival-date" id="arrival-date" placeholder="24 АПРЕЛЯ 2017">
+                <input class="arrival-date" type="text" name="arrival-date" id="arrival-date" value="24 АПРЕЛЯ 2017">
                 <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
               </p>
               <p>
                 <label for="departure-date">Дата выезда:</label>
-                <input class="departure-date" type="text" name="departure-date" id="departure-date" placeholder="4 ИЮЛЯ 2017">
+                <input class="departure-date" type="text" name="departure-date" id="departure-date" value="4 ИЮЛЯ 2017">
                 <svg class="calendar" xmlns="http://www.w3.org/2000/svg" width="21" height="22"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139c0 .253-.195.459-.437.459H1.75c-.241 0-.438-.206-.438-.459V3.862c0-.253.196-.459.438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
               </p>
               <div class="count">
                 <p class="adults">
                   <label for="adult-amount">Взрослые:</label>
-                  <input class="adult-amount" type="text" name="adult-amount" id="adult-amount" placeholder="2">
-                  <button class="adult-minus" name="adult-minus" value="adult-minus"><span class="visually-hidden">-</span></button>
-                  <button class="adult-plus" name="adult-plus" value="adult-plus"><span class="visually-hidden">+</span></button>
+                  <input class="adult-amount" type="text" name="adult-amount" id="adult-amount" value="2">
+                  <button class="adult-minus" name="adult-minus" value="adult-minus" type="button"><span class="visually-hidden">-</span></button>
+                  <button class="adult-plus" name="adult-plus" value="adult-plus" type="button"><span class="visually-hidden">+</span></button>
                 </p>
                 <p class="children">
                   <label for="children-amount">Дети:</label>
-                  <input class="children-amount" type="text" name="children-amount" id="children-amount" placeholder="0">
-                  <button class="child-minus" name="child-minus" value="child-minus"><span class="visually-hidden">-</span></button>
-                  <button class="child-plus" name="child-plus" value="child-plus"><span class="visually-hidden">+</span></button>
+                  <input class="children-amount" type="text" name="children-amount" id="children-amount" value="0">
+                  <button class="child-minus" name="child-minus" value="child-minus" type="button"><span class="visually-hidden">-</span></button>
+                  <button class="child-plus" name="child-plus" value="child-plus" type="button"><span class="visually-hidden">+</span></button>
                 </p>
               </div>
               <input class="search-button" type="submit" name="searching-date" value="Найти">
