Выполнила критерий кроссбраузерности

--- a/hotels.html
+++ b/hotels.html
@@ -52,14 +52,17 @@
                   <label for="from-value">От</label>
                   <input type="text" name="from-value" id="from-value" value="0" >
                 </div>
-                <div class="vertical-line"></div>
                 <div class="center">
                   <label for="till-value">До</label>
                   <input type="text" name="till-value" id="till-value" value="3000">
                 </div>
               </div>
-              <div class="bar-on"></div>
-              <div class="bar-off"></div>
+              <div class="indicator">
+                <div class="bar-on"></div>
+                <div class="bar-off"></div>
+                <button class="left-pin" type="button" name="left-pin" value="left-pin"></button>
+                <button class="right-pin" type="button" name="right-pin" value="right-pin"></button>
+              </div>
             </fieldset>
             <input class="searching-detailed" type="submit" name="searching-detailed" value="Показать">
           </form>
