--- a/hotels.html
+++ b/hotels.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize-min.css">
+    <link rel="stylesheet" type="text/css" href="css/style-min.css">
   </head>
   <body>
     <div class="container">
@@ -60,8 +60,8 @@
               <div class="indicator">
                 <div class="bar-on"></div>
                 <div class="bar-off"></div>
-                <button class="left-pin" type="button" name="left-pin" value="left-pin"></button>
-                <button class="right-pin" type="button" name="right-pin" value="right-pin"></button>
+                <button class="left-pin" type="button" name="left-pin" value="left-pin"><span class="visually-hidden">Левый порог</span></button>
+                <button class="right-pin" type="button" name="right-pin" value="right-pin"><span class="visually-hidden">Правый порог</span></button>
               </div>
             </fieldset>
             <input class="searching-detailed" type="submit" name="searching-detailed" value="Показать">
@@ -81,56 +81,56 @@
           <ul class="response-main">
             <li>
               <img src="img/amara.jpg" width="135" height="90" alt="Amara Resort & Spa">
-              <div class="block">
-                <div class="mini-block">
-                  <h2><a class="variant" href=""> Amara Resort &amp; Spa</a></h2>
-                  <p class="type">Гостиница</p>
-                  <span>от 4000 Р.</span>
-                  <a class="detailed" href="#">Подробнее</a>
-                  <a class="book" href="#">Забронировать</a>
-                </div>
+              <div class="hotel-info">
+                <h2><a class="variant" href=""> Amara Resort &amp; Spa</a></h2>
+                <p class="type">Гостиница</p>
+                <span>от 4000 Р.</span>
+                <a class="detailed" href="#">Подробнее</a>
+                <a class="book" href="#">Забронировать</a>
+              </div>
+              <div class="rating">
                 <ul class="rating-stars" aria-label="четырехзвездочный отель">
                   <li></li>
                   <li></li>
                   <li></li>
                   <li></li>
                 </ul>
-                <p class="rating">Рейтинг: 8,5</p>
+                <p class="rating-value">Рейтинг: 8,5</p>
               </div>
             </li>
             <li>
               <img src="img/desert.jpg"  width="135" height="90" alt="Desert Quail Inn">
-              <div class="block">
-                <div class="mini-block">
-                  <h2><a class="variant" href="">Desert Quail Inn</a></h2>
-                  <p class="type">Мотель</p>
-                  <span>от 3000 Р.</span>
-                  <a class="detailed" href="#">Подробнее</a>
-                  <a class="book" href="#">Забронировать</a>
-                </div>  
+              <div class="hotel-info">
+                <h2><a class="variant" href="">Desert Quail Inn</a></h2>
+                <p class="type">Мотель</p>
+                <span>от 3000 Р.</span>
+                <a class="detailed" href="#">Подробнее</a>
+                <a class="book" href="#">Забронировать</a>
+              </div>  
+              <div class="rating">
                 <ul class="rating-stars" aria-label="трехзвездочный отель">
                   <li></li>
                   <li></li>
                   <li></li>
                 </ul>
-                <p class="rating">Рейтинг: 8,9</p>
+                <p class="rating-value">Рейтинг: 8,9</p>
               </div>
             </li>
             <li>
               <img src="img/villas.jpg" width="135" height="90" alt="Villas at Poco Diablo">
-              <div class="block">
-                <div class="mini-block">
-                  <h2><a class="variant" href="">Villas at Poco Diablo</a></h2>
-                  <p class="type">Апартаменты</p>
-                  <span>от 2000 Р.</span>
-                  <a class="detailed" href="#">Подробнее</a>
-                  <a class="book" href="#">Забронировать</a>
-                </div>
+              <div class="hotel-info">
+                <h2><a class="variant" href="">Villas at Poco Diablo</a></h2>
+                <p class="type">Апартаменты</p>
+                <span>от 2000 Р.</span>
+                <a class="detailed" href="#">Подробнее</a>
+                <a class="book" href="#">Забронировать</a>
+              </div>
+              <div class="rating">
                 <ul class="rating-stars" aria-label="двухзвездочный отель">
                   <li></li>
                   <li></li>
                 </ul>
-                <p class="rating">Рейтинг: 9,2</p>
+                <p class="rating-value">Рейтинг: 9,2</p>
               </div>
             </li>
           </ul>
